ignored .env files

--- a/simplilearn_backend/.env.example
+++ b/simplilearn_backend/.env.example
@@ -1,23 +1,5 @@
 PORT=8000
-DB_URL= 'mongodb://localhost:27017/db_name'
+DB_URL= mongodb://localhost:27017/Simplilearn
 APP_KEY= 'thisissecret'
 
-APP_URL=
-
-ADMIN_EMAIL
-ADMIN_PASSWORD
-
-SMTP_HOST=
-SMTP_FROM=
-SMTP_USERNAME= 
-SMTP_PASSWORD= 
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=
-
-TWILIO_SID= 
-TWILIO_TOKEN= 
-TWILIO_FROM= 
-
-COLLAGE_API_KEY=
+APP_URL=http://localhost:3000
