--- a/simplilearn_frontend/package.json
+++ b/simplilearn_frontend/package.json
@@ -13,12 +13,13 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.1",
     "@babel/polyfill": "^7.8.7",
     "antd": "^4.2.0",
     "axios": "^0.19.2",
     "axios-mock-adapter": "^1.18.1",
     "babel-plugin-import": "^1.13.0",
-    "customize-cra": "^0.9.1",
+    "customize-cra": "^1.0.0-alpha.0",
     "google-maps-react": "^2.0.6",
     "history": "^4.10.1",
     "less": "^3.11.1",
